[gdb/build] Fix build without ncurses in maintenance_info_screen

With a build without ncurses we run into:
...
src/gdb/utils.c: In function ‘void maintenance_info_screen(const char*, int)’:
src/gdb/utils.c:1310:7: error: ‘COLS’ was not declared in this scope
       COLS);
       ^~~~
src/gdb/utils.c:1331:8: error: ‘LINES’ was not declared in this scope
        LINES);
        ^~~~~
...

Fix this by using HAVE_LIBCURSES.

Tested on x86_64-linux.

PR build/30391
Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=30391